# STCTS

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.ps1  setup.sh
benchmarks/: README.md  __init__.py  noise_injection.py  plot_results.py  run_all.py  test_benchmarks.py  test_compression.py  test_plot_generation.py
benchmarks/baselines/: __init__.py  encodec.py  opus.py
benchmarks/metrics/: __init__.py  perceptual_quality.py  speaker_similarity.py  wer.py
configs/: balanced_mode.yaml  high_quality_mode.yaml  minimal_mode.yaml
figure_scripts/: interpolation_demo.py  transmission_demo.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: CallInterface.tsx
frontend/src/styles/: globals.css
paper/: paper.tex
plot_configs/: plot_01_mode.yaml  plot_02_mode.yaml  plot_03_mode.yaml  plot_04_mode.yaml  plot_05_mode.yaml  plot_06_mode.yaml  plot_07_mode.yaml  plot_08_mode.yaml  plot_09_mode.yaml  plot_10_mode.yaml  plot_11_mode.yaml  plot_12_mode.yaml  plot_13_mode.yaml  plot_14_mode.yaml  plot_15_mode.yaml  plot_16_mode.yaml  plot_17_mode.yaml  plot_18_mode.yaml  plot_19_mode.yaml  plot_20_mode.yaml  plot_21_mode.yaml  plot_22_mode.yaml  plot_23_mode.yaml  plot_24_mode.yaml  plot_25_mode.yaml  plot_26_mode.yaml  plot_27_mode.yaml
scripts/: compare_configs.py  compare_prosody.py  generate_modules.py  setup_models.ps1  setup_models.sh  test_all_configs.ps1  test_all_configs.sh  test_compression_sizes.py
src/: __init__.py  config.py
src/app/: __init__.py  cli.py  voice_client.py
src/audio/: __init__.py  io.py  sync.py
src/compression/: __init__.py  delta_encoder.py  prosody.py  quantizer.py  text.py  timbre.py
src/network/: __init__.py  channel.py  packet.py  priority_queue.py
src/pipeline/: __init__.py  receiver.py  sender.py
src/prosody/: __init__.py  emotion.py  emphasis.py  energy.py  extractor.py  pitch.py  rate.py
src/signaling/: __init__.py  client.py  server.py
src/speaker/: __init__.py  change_detection.py  embedding.py  manager.py  profile.py
src/stt/: __init__.py  base.py  faster_whisper.py  streaming.py  vad.py
src/tts/: __init__.py  base.py  xtts.py
src/utils/: __init__.py  bandwidth_monitor.py  cli.py  config.py  logger.py
tests/: README.md  conftest.py
tests/unit/: test_bandwidth_monitor.py  test_config.py  test_delta_encoder.py  test_extractor.py  test_logger.py  test_packet.py  test_priority_queue.py  test_prosody_compression.py  test_prosody_extraction.py  test_quantizer.py  test_text_compression.py  test_timbre_compression.py
