[project]
name = "stt-compress-tts"
version = "0.1.0"
description = "Ultra-low bandwidth voice communication system using STT-Compression-TTS"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Audio processing
    "pyaudio==0.2.14",
    "soundfile==0.13.1",
    "librosa",
    "resampy==0.4.2",
    "pydub==0.25.1",
    
    # STT
    "faster-whisper>=1.0.0",
    "vosk==0.3.45",
    "webrtcvad==2.0.10",
    
    # TTS
    "TTS==0.22.0",  # Coqui TTS with XTTS-v2
    "piper-tts>=1.2.0",  # Piper TTS support
    
    # Prosody and speaker features
    "praat-parselmouth==0.4.3",
    "speechbrain==1.0.2",
    
    # ML frameworks
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "transformers==4.33.3",
    
    # Compression
    "brotli>=1.1.0",
    "lz4>=4.3.2",
    
    # Networking
    "aiortc>=1.6.0",
    "aiohttp>=3.9.1",
    "websockets>=12.0",
    "python-socketio>=5.10.0",
    "aioconsole",
    
    # Backend server
    "fastapi>=0.105.0",
    "uvicorn[standard]>=0.25.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Utilities
    "numpy",
    "scipy",
    "pandas",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "click>=8.1.7",
    "tqdm>=4.66.1",
    "loguru>=0.7.2",
    
    # Cryptography
    "cryptography>=41.0.7",
    
    # Audio quality metrics
    "pesq==0.0.4",
    "pystoi==0.4.0",
    "nisqa @ git+https://forgejo.dywsy21.cn:18080/dywsy21/nisqa2.0",
    # Note: UTMOS and NISQA require separate installation from their repos
    
    # Development dependencies
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.92.1",
    "black>=23.12.1",
    "isort>=5.13.2",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
    "pre-commit>=3.6.0",
    
    # Benchmarking dependencies
    "matplotlib>=3.8.2",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "jiwer>=3.0.3",
    "jupyter>=1.0.0",
    "opuslib>=3.0.0",
    "encodec>=0.1.1"
]

[project.optional-dependencies]
gpu = [
    # GPU-accelerated versions
    "torch",  # Will use CUDA if available
    "torchaudio",
]

[project.scripts]
stt-tts = "src.app.cli:main"
stt-tts-server = "src.app.server:run"
stt-tts-signaling = "src.signaling.server:run"
benchmark = "benchmarks.run_all:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term"
asyncio_mode = "auto"

[[tool.uv.index]]
name = "pytorch"
url = "https://mirrors.nju.edu.cn/pytorch/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }
torchvision = { index = "pytorch" }
